examples/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine-test
spec:
  containers:
    - name: alpine-curl
      image: poorunga/alpine-curl
      imagePullPolicy: IfNotPresent
      args:
        - sleep
        - "12000"
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
            - key: node-role.kubernetes.io/edge
              operator: DoesNotExist
            - key: node-role.kubernetes.io/agent
              operator: DoesNotExist
---
apiVersion: v1
kind: Pod
metadata:
  name: websocket-test
spec:
  containers:
    - name: websocket
      image: kevindavis/websocket:0.1
      imagePullPolicy: IfNotPresent
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
            - key: node-role.kubernetes.io/edge
              operator: DoesNotExist
            - key: node-role.kubernetes.io/agent
              operator: DoesNotExist
