examples/cloudzone.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudzone
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcp-echo-cloud
  namespace: cloudzone
  labels:
    app: tcp-echo-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tcp-echo-cloud
  template:
    metadata:
      labels:
        app: tcp-echo-cloud
    spec:
      containers:
        - name: tcp-echo-container
          image: cjimti/go-echo:latest
          imagePullPolicy: Always
          ports:
            - name: tcp-echo-port
              containerPort: 2701
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/edge
                    operator: DoesNotExist
                  - key: node-role.kubernetes.io/agent
                    operator: DoesNotExist
---
apiVersion: v1
kind: Service
metadata:
  name: tcp-echo-cloud-svc
  namespace: cloudzone
  labels:
    app: tcp-echo-cloud
spec:
  selector:
    app: tcp-echo-cloud
  ports:
    - name: tcp-0
      protocol: TCP
      port: 2701
      targetPort: 2701
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-sleep-cloud
  namespace: cloudzone
  labels:
    app: tcp-echo-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tcp-echo-cloud
  template:
    metadata:
      labels:
        app: tcp-echo-cloud
    spec:
      containers:
        - name: busybox
          image: busybox:1.28
          imagePullPolicy: IfNotPresent
          args:
            - sleep
            - "12000"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/edge
                    operator: DoesNotExist
                  - key: node-role.kubernetes.io/agent
                    operator: DoesNotExist
