examples/edgezone.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: edgezone
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcp-echo-edge
  namespace: edgezone
  labels:
    app: tcp-echo-edge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tcp-echo-edge
  template:
    metadata:
      labels:
        app: tcp-echo-edge
    spec:
      #nodeName: ke-edge1
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/edge
                    operator: Exists
                  - key: node-role.kubernetes.io/agent
                    operator: Exists
      containers:
        - name: tcp-echo-container
          image: cjimti/go-echo:latest
          imagePullPolicy: Always
          ports:
            - name: tcp-echo-port
              containerPort: 2701
---
apiVersion: v1
kind: Service
metadata:
  name: tcp-echo-edge-svc
  namespace: edgezone
  labels:
    app: tcp-echo-edge
spec:
  selector:
    app: tcp-echo-edge
  ports:
    - name: tcp-0
      protocol: TCP
      port: 2701
      targetPort: 2701
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-sleep-edge
  namespace: edgezone
  labels:
    app: tcp-echo-edge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tcp-echo-edge
  template:
    metadata:
      labels:
        app: tcp-echo-edge
    spec:
      #nodeName: ke-edge1
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/edge
                    operator: Exists
                  - key: node-role.kubernetes.io/agent
                    operator: Exists
      containers:
        - name: busybox
          image: busybox:1.28
          imagePullPolicy: IfNotPresent
          args:
            - sleep
            - "12000"
