examples/hostname-lb-default.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hostname-lb-edge2
  namespace: edgemesh-test
  labels:
    app: hostname-lb-edge
spec:
  nodeName: ke-edge2
  containers:
    - name: hostname
      image: k8s.gcr.io/serve_hostname:latest
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 9376
---
apiVersion: v1
kind: Pod
metadata:
  name: hostname-lb-edge3
  namespace: edgemesh-test
  labels:
    app: hostname-lb-edge
spec:
  nodeName: ke-edge3
  containers:
    - name: hostname
      image: k8s.gcr.io/serve_hostname:latest
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 9376
---
apiVersion: v1
kind: Service
metadata:
  name: hostname-lb-svc
  namespace: edgemesh-test
spec:
  selector:
    app: hostname-lb-edge
  ports:
    - name: http-0
      port: 12345
      protocol: TCP
      targetPort: 9376
