examples/hostname.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hostname-edge
  namespace: edgemesh-test
  labels:
    app: hostname-edge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hostname-edge
  template:
    metadata:
      labels:
        app: hostname-edge
    spec:
      #nodeName: ke-edge1
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/edge
                    operator: Exists
                  - key: node-role.kubernetes.io/agent
                    operator: Exists
      containers:
        - name: hostname
          image: mirrorgooglecontainers/serve_hostname:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9376
---
apiVersion: v1
kind: Service
metadata:
  name: hostname-svc
  namespace: edgemesh-test
spec:
  selector:
    app: hostname-edge
  ports:
    - name: http-0
      port: 12345
      protocol: TCP
      targetPort: 9376
