examples/tcp-echo-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcp-echo-deployment
  namespace: edgemesh-test
  labels:
    app: tcp-echo-edge
    system: example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tcp-echo-edge
  template:
    metadata:
      labels:
        app: tcp-echo-edge
        system: example
    spec:
      nodeName: ke-edge2
      containers:
        - name: tcp-echo-container
          image: cjimti/go-echo:latest
          imagePullPolicy: Always
          ports:
            - name: tcp-echo-port
              containerPort: 2701
              hostPort: 2701
---
apiVersion: v1
kind: Service
metadata:
  name: tcp-echo-service
  namespace: edgemesh-test
  labels:
    app: tcp-echo-edge
spec:
  selector:
    app: tcp-echo-edge
  ports:
    - name: tcp-0
      protocol: TCP
      port: 2701
      targetPort: 2701
