examples/websocket.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws-edge
  namespace: edgemesh-test
  labels:
    app: ws-edge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ws-edge
  template:
    metadata:
      labels:
        app: ws-edge
    spec:
      nodeName: ke-edge2
      containers:
        - name: ws
          image: kevindavis/websocket:0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ws-svc
  namespace: edgemesh-test
spec:
  selector:
    app: ws-edge
  ports:
    - name: http-0
      port: 12348
      protocol: TCP
      targetPort: 8080
