examples/hostname-lb-consistenthash.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hostname-lb-edge
  labels:
    app: hostname-lb-edge
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hostname-lb-edge
  template:
    metadata:
      labels:
        app: hostname-lb-edge
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: node-role.kubernetes.io/edge
                  operator: Exists
                - key: node-role.kubernetes.io/agent
                  operator: Exists
      containers:
        - name: hostname
          image: mirrorgooglecontainers/serve_hostname:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9376
---
apiVersion: v1
kind: Service
metadata:
  name: hostname-lb-svc
spec:
  selector:
    app: hostname-lb-edge
  ports:
    - name: http-0
      port: 12345
      protocol: TCP
      targetPort: 9376
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hostname-lb-svc
spec:
  host: hostname-lb-svc
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: User-Agent
