examples/hostname-lb-random-gateway.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hostname-lb-edge2
  namespace: edgemesh-test
  labels:
    app: hostname-lb-edge
spec:
  nodeName: ke-edge2
  containers:
    - name: hostname
      image: serve_hostname:latest
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 9376
          hostPort: 9376
---
apiVersion: v1
kind: Pod
metadata:
  name: hostname-lb-edge3
  namespace: edgemesh-test
  labels:
    app: hostname-lb-edge
spec:
  nodeName: ke-edge3
  containers:
    - name: hostname
      image: serve_hostname:latest
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 9376
          hostPort: 9376
---
apiVersion: v1
kind: Service
metadata:
  name: hostname-lb-svc
  namespace: edgemesh-test
spec:
  selector:
    app: hostname-lb-edge
  ports:
    - name: http-0
      port: 12345
      protocol: TCP
      targetPort: 9376
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: edgemesh-gateway
  namespace: edgemesh-test
spec:
  selector:
    kubeedge: edgemesh-gateway
  servers:
    - hosts:
        - '*'
      port:
        name: http-0
        number: 12345
        protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hostname-lb-svc
  namespace: edgemesh-test
spec:
  host: hostname-lb-svc
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: edgemesh-gateway-svc
  namespace: edgemesh-test
spec:
  gateways:
    - edgemesh-gateway
  hosts:
    - '*'
  http:
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          host: hostname-lb-svc
          port:
            number: 12345
