examples/hostname-lb-roundrobin.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hostname-lb-edge2
  namespace: edgemesh-test
  labels:
    app: hostname-lb-edge
spec:
  nodeName: ke-edge2
  containers:
    - name: hostname
      image: serve_hostname:latest
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 9376
          hostPort: 9376
---
apiVersion: v1
kind: Pod
metadata:
  name: hostname-lb-edge3
  namespace: edgemesh-test
  labels:
    app: hostname-lb-edge
spec:
  nodeName: ke-edge3
  containers:
    - name: hostname
      image: serve_hostname:latest
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 9376
          hostPort: 9376
---
apiVersion: v1
kind: Service
metadata:
  name: hostname-lb-svc
  namespace: edgemesh-test
spec:
  selector:
    app: hostname-lb-edge
  ports:
    - name: http-0
      port: 12345
      protocol: TCP
      targetPort: 9376
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hostname-lb-svc
  namespace: edgemesh-test
spec:
  host: hostname-lb-svc
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
